--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,8 @@
   </div>
   <div class="main">
     <p>Current User = <span class="user">{{user}}</span></p>
-    <router-outlet></router-outlet>
+    <div class="routeComponents" [@triggerName]="prepareRoute(outlet)">
+      <router-outlet #outlet="outlet"></router-outlet>
+    </div>
   </div>
 </div>
