Stepper form can now go back after submiting the form

--- a/src/app/component/gamma/gamma.component.html
+++ b/src/app/component/gamma/gamma.component.html
@@ -89,7 +89,7 @@
       <h5>You are now done.</h5>
       <div>
           <button mat-raised-button color="primary" matStepperPrevious>Back</button> &nbsp; &nbsp;
-          <button mat-raised-button color="accent" (click)="onSubmit();stepper.reset()" type="submit">Submit</button> &nbsp; &nbsp;
+          <button mat-raised-button color="accent" (click)="onSubmit()" type="submit">Submit</button> &nbsp; &nbsp;
           <button mat-raised-button color="warn" (click)="stepper.reset()">Reset</button>
       </div>
     </mat-step>
