--- a/src/app/component/gamma/gamma.component.html
+++ b/src/app/component/gamma/gamma.component.html
@@ -1,5 +1,4 @@
-<p>gamma works!</p>
-<p>Both User 1 and User 2 Can Access this Component</p>
+<p>Anyone Can Access this Component</p>
 
 <mat-horizontal-stepper [linear]="isLinear" #stepper labelPosition="bottom">
     <!-- Step Name -->
