--- a/src/app/component/sidebar/sidebar.component.html
+++ b/src/app/component/sidebar/sidebar.component.html
@@ -17,7 +17,7 @@
         </li>
         <li *ngIf="checkUser('gamma')">
             <a routerLink="/gamma" routerLinkActive="active">
-                Gamma
+                Mat Stepper
             </a>
         </li>
     </ul>
