--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,14 @@
 .layout{
     display: flex;
+    flex-direction: column;
     width: 100%;
     min-height: 100vh;
     overflow: hidden;
+}
+
+.section{
+    display: flex;
+    flex: 1 1 100%;
 }
 
 .sidebar{
@@ -10,7 +16,7 @@
     min-width: 200px;
     position: relative;
     z-index: 2;
-    background-color: white;
+    background-color: #f8f9fa;;
 }
 
 .main{
