--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -7,13 +7,13 @@
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link"  (click)="setUser()" routerLink="/home" routerLinkActive="active"> All <span class="sr-only">(current)</span> </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" (click)="setUser('user 1')">User 1</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link disabled" href="#">Disabled</a>
+            <a class="nav-link" (click)="setUser('user 2')">User 2</a>
         </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
