--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -1,4 +1,1 @@
-<p>home works!</p>
-<h3>Set User</h3>
-<button (click)="setUser('user 1')">User 1</button>
-<button (click)="setUser('user 2')">User 2</button>
+<h3>Current User = {{currentUser | async}}</h3>
