--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -6,14 +6,14 @@
 
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-        <li class="nav-item active">
-            <a class="nav-link"  (click)="setUser()" routerLink="/home" routerLinkActive="active"> All <span class="sr-only">(current)</span> </a>
+        <li class="nav-item">
+            <a class="nav-link" [ngClass]="{active: user === null}" (click)="setUser()" routerLink="/home"> All <span class="sr-only">(current)</span> </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" (click)="setUser('user 1')">User 1</a>
+            <a class="nav-link" [ngClass]="{active: user === 'user 1'}" (click)="setUser('user 1')">User 1</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" (click)="setUser('user 2')">User 2</a>
+            <a class="nav-link" [ngClass]="{active: user === 'user 2'}" (click)="setUser('user 2')">User 2</a>
         </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
