css change in beta component

--- a/src/app/component/beta/beta.component.html
+++ b/src/app/component/beta/beta.component.html
@@ -13,8 +13,8 @@
             <table>
                 <thead>
                     <tr>
-                        <td>Title</td>
-                        <td>Time</td>
+                        <th style="width: 75%;">Title</th>
+                        <th style="width: 25%;">Time</th>
                     </tr>
                 </thead>
                 <tbody>
