Navbar brand changed and footer content changed

--- a/src/app/common/toaster/toaster.component.html
+++ b/src/app/common/toaster/toaster.component.html
@@ -6,7 +6,7 @@
                 <span *ngSwitchCase="'error'"> <img src="../../../assets/svg/error.svg"> </span>
                 <span *ngSwitchCase="'success'"> <img src="../../../assets/svg/checked.svg"> </span>
                 <span *ngSwitchCase="'warning'"> <img src="../../../assets/svg/danger-sign.svg"> </span>
-                <span *ngSwitchDefault>output2</span>
+                <span *ngSwitchDefault><img src="../../../assets/svg/info.svg"></span>
             </span>
             <span>{{options.message}}</span>
         </div>
