--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="footer">
     <div class="container text-center">
-        <span class="text-muted">Place sticky footer content here.</span>
+        <span class="text-muted">Aashir Azeem Front-End Web Developer.</span>
     </div>
 </footer>
