Select vs Datalist & Display new Html Code demo is added

--- a/src/app/component/sidebar/sidebar.component.html
+++ b/src/app/component/sidebar/sidebar.component.html
@@ -20,5 +20,15 @@
                 Mat Stepper
             </a>
         </li>
+        <li>
+            <a routerLink="/datalist" routerLinkActive="active">
+                Select vs Datalist
+            </a>
+        </li>
+        <li>
+            <a routerLink="/newHtml" routerLinkActive="active">
+                Display New Html Code
+            </a>
+        </li>
     </ul>
 </div>
