--- a/src/app/component/display-new-html/display-new-html.component.html
+++ b/src/app/component/display-new-html/display-new-html.component.html
@@ -1,1 +1,17 @@
-<iframe [srcdoc]="htmlCode" sandbox></iframe>
+<h2>New Html Display In new Document</h2>
+<iframe class="d-block w-100 mb-3" [srcdoc]="htmlCode" sandbox></iframe>
+<h2>Html Code From Server</h2>
+<code>
+    <pre class="m-0">
+        &lt;!DOCTYPE html>
+        &lt;html>
+            &lt;head>
+                &lt;title>Im a new Html &lt;/title>
+                &lt;/head>
+            &lt;body>
+                The content of the document......
+                &lt;div>Hello World &lt;/div>
+            &lt;/body>
+        &lt;/html>
+    </pre>
+</code>
