--- a/src/app/component/select-vs-datalist/select-vs-datalist.component.html
+++ b/src/app/component/select-vs-datalist/select-vs-datalist.component.html
@@ -1,5 +1,5 @@
-<section class="d-flex">
-    <div class="select-section">
+<section class="d-flex row">
+    <div class="select-section mb-5 mb-md-0 col-12 col-md-6">
         <div class="mb-4">
             <span>Selected Value of the Select = </span>&nbsp;
             <span class="value">{{animal}}</span>
@@ -17,7 +17,7 @@
             </select>
         </div>
     </div>
-    <div class="datalist-section">
+    <div class="datalist-section col-12 col-md-6">
 
         <div class="mb-4">
             <span>Selected Value of the Datalist = </span>&nbsp;
@@ -28,12 +28,38 @@
             <div>
                 <input class="dropdown" placeholder="Select Game..." [(ngModel)]="game" list="games">
                 <datalist id="games">
-                    <option value="">Select Games...</option>
-                    <option value="Assasins Creed Brotherhood">
-                    <option value="Assasins Creed Origins">
+                    <option value="Assassin's Creed">
+                    <option value="Assassin's Creed II">
+
+                    <option value="Assassin's Creed: Brotherhood">
+                    <option value="Assassin's Creed: Revelations">
+                    <option value="Assassin's Creed III">
+                    <option value="Assassin's Creed IV: Black Flag">
+                    <option value="Assassin's Creed: Rogue">
+                    <option value="Assassin's Creed: Unity">
+                    <option value="Assassin’s Creed: Syndicate">
+                    <option value="Assassin’s Creed: Origins">
+                    <option value="Assassin’s Creed: Odyssey">
+                    <option value="Assassin's Creed: Valhalla">
+                    <option value="Prince of Persia">
+                    <option value="Prince of Persia: The Two Thrones">
+                    <option value="Prince of Persia: Warrior Within">
+                    <option value="Prince of Persia: The Sands of Time">
+                    <option value="Prince of Persia: The Forgotten Sands">
                     <option value="Prince of Persia">
                     <option value="GTA Vice City">
+                    <option value="GTA Vice City Stories">
+                    <option value="GTA Liberty City">
+                    <option value="GTA Liberty Stories">
                     <option value="God of War">
+                    <option value="God of War 2">
+                    <option value="God of War 3">
+                    <option value="God of War (2018)">
+                    <option value="God of War: The Ghost of Sparta">
+                    <option value="God of War: Chains of Olympus">
+                    <option value="God of War: Ascension">
+                    <option value="Witcher 1">
+                    <option value="Witcher 2">
                     <option value="Witcher 3">
                 </datalist>
             </div>
