Drop Shadow vs Box Shadow Demo

--- a/src/app/component/display-new-html/display-new-html.component.html
+++ b/src/app/component/display-new-html/display-new-html.component.html
@@ -1,5 +1,5 @@
 <h2>New Html Display In new Document</h2>
-<iframe class="d-block w-100 mb-3" [srcdoc]="htmlCode" sandbox></iframe>
+<iframe class="d-block w-100 mb-3" [srcdoc]="htmlCode" sandbox="allow-same-origin allow-scripts allow-popups allow-forms"></iframe>
 <h2>Html Code From Server</h2>
 <code>
     <pre class="m-0">
