--- a/src/app/component/sidebar/sidebar.component.html
+++ b/src/app/component/sidebar/sidebar.component.html
@@ -30,5 +30,10 @@
                 Display New Html Code
             </a>
         </li>
+        <li>
+            <a routerLink="/dropshadow" routerLinkActive="active">
+                DropShadow vs BoxShadow
+            </a>
+        </li>
     </ul>
 </div>
