--- a/src/app/component/select-vs-datalist/select-vs-datalist.component.css
+++ b/src/app/component/select-vs-datalist/select-vs-datalist.component.css
@@ -44,6 +44,6 @@ section{
     height: 24px;
 }
 
-.datalist-dropdown:hover > .dropdown-icon:f, .datalist-dropdown .dropdown:focus + .dropdown-icon{
+.datalist-dropdown:hover > .dropdown-icon, .datalist-dropdown .dropdown:focus + .dropdown-icon{
     display: block;
 }
