text editor component added

--- a/src/app/component/sidebar/sidebar.component.html
+++ b/src/app/component/sidebar/sidebar.component.html
@@ -35,5 +35,10 @@
                 DropShadow vs BoxShadow
             </a>
         </li>
+        <li>
+            <a routerLink="/editor" routerLinkActive="active">
+                Text Editor
+            </a>
+        </li>
     </ul>
 </div>
