optimized loader flag code in app.ts

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,5 +14,5 @@
   <div *ngIf="toaster.length !== 0">
     <app-toaster *ngFor="let item of toaster.slice().reverse()"></app-toaster>
   </div>
-  <app-loader *ngIf="loader | async"></app-loader>
+  <app-loader *ngIf="loader"></app-loader>
 </div>
