Checking new branch

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,4 +15,5 @@
     <app-toaster *ngFor="let item of toaster.slice().reverse()"></app-toaster>
   </div>
   <app-loader *ngIf="loader"></app-loader>
+  checking New branch
 </div>
