Custom select and its functionalities

--- a/src/app/component/sidebar/sidebar.component.html
+++ b/src/app/component/sidebar/sidebar.component.html
@@ -21,6 +21,11 @@
             </a>
         </li>
         <li>
+            <a routerLink="/custom-select" routerLinkActive="active">
+                Custom Select Box
+            </a>
+        </li>
+        <li>
             <a routerLink="/datalist" routerLinkActive="active">
                 Select vs Datalist
             </a>
