lazyload assts demo

--- a/src/app/component/sidebar/sidebar.component.html
+++ b/src/app/component/sidebar/sidebar.component.html
@@ -50,5 +50,15 @@
                 Thanos Animation
             </a>
         </li>
+        <li>
+            <a routerLink="/delta" routerLinkActive="active">
+                Delta
+            </a>
+        </li>
+        <li>
+            <a routerLink="/zeta" routerLinkActive="active">
+                Zeta
+            </a>
+        </li>
     </ul>
 </div>
