heartland global payment demo

--- a/src/app/delta/delta.component.html
+++ b/src/app/delta/delta.component.html
@@ -1,13 +1,26 @@
 <div class="container">
     <div class="row">
         <div class="col-4">
-            <img src="./assets/becca-tapert--A_Sx8GrRWg-unsplash.jpg">
+            <img width="300px" src="../../assets/image/becca-tapert--A_Sx8GrRWg-unsplash.jpg">
         </div>
         <div class="col-4">
-            <img src="./assets/dino-reichmuth-A5rCN8626Ck-unsplash.jpg">
+            <img width="300px" src="../../assets/image/dino-reichmuth-A5rCN8626Ck-unsplash.jpg">
         </div>
         <div class="col-4">
-            <img src="./assets/michael-DXQB5D1njMY-unsplash.jpg">
+            <img width="300px" src="../../assets/image/michael-DXQB5D1njMY-unsplash.jpg">
         </div>
     </div>
 </div>
+
+<form id="payment-form" method="get">
+    <!-- Other input fields to capture relevant data -->
+    <label for="billing-zip">Billing Zip Code</label>
+    <input id="billing-zip" name="billing-zip" type="tel" />
+
+    <!-- Targets for the credit card form's fields -->
+    <div id="credit-card-card-holder"></div>
+    <div id="credit-card-card-number"></div>
+    <div id="credit-card-card-cvv"></div>
+    <div id="credit-card-card-expiration"></div>
+    <div id="credit-card-submit"></div>
+</form>
