--- a/src/app/zeta/zeta.component.html
+++ b/src/app/zeta/zeta.component.html
@@ -1,13 +1,13 @@
 <div class="container">
     <div class="row">
         <div class="col-4">
-            <img src="../../assets/image/tirza-van-dijk-hbwdmqcmP6k-unsplash.jpg">
+            <img width="300px" src="../../assets/image/tirza-van-dijk-hbwdmqcmP6k-unsplash.jpg">
         </div>
         <div class="col-4">
-            <img src="../../assets/image/todd-quackenbush-B60t4HvxznY-unsplash.jpg">
+            <img width="300px" src="../../assets/image/todd-quackenbush-B60t4HvxznY-unsplash.jpg">
         </div>
         <div class="col-4">
-            <img src="../../assets/image/toni-lluch-JoRoy500nCc-unsplash.jpg">
+            <img width="300px" src="../../assets/image/toni-lluch-JoRoy500nCc-unsplash.jpg">
         </div>
     </div>
 </div>
