new feature lazyload component demo added

--- a/src/app/component/sidebar/sidebar.component.html
+++ b/src/app/component/sidebar/sidebar.component.html
@@ -21,6 +21,11 @@
             </a>
         </li>
         <li>
+            <a routerLink="/lazyload" routerLinkActive="active">
+                Lazy Load Component
+            </a>
+        </li>
+        <li>
             <a routerLink="/custom-select" routerLinkActive="active">
                 Custom Select Box
             </a>
